--- a/Esquema_en.qmd
+++ b/Esquema_en.qmd
@@ -222,7 +222,9 @@ Cervical Cancer
 
 ## MRI golden standart
 
-![](img/MRIMandatory.png)
+<div style="display: inline-block; border: 1px solid black; padding: 5px;">
+  ![](img/MRIMandatory.png)
+</div>
 
 
 # Imaging <br> Modalities: <br> CT vs MRI
